# langtons-ant

./: README.md  environment.yml  pyproject.toml  setup.cfg  tox.ini
lant/: __init__.py  __main__.py
